--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -42,7 +42,15 @@
   <body>
     <div>
       <link href="./choose_class.css" rel="stylesheet" />
-
+      <div class="choose_class-lowerbuttons">
+        
+        <button
+          src="public/playground_assets/ButtonExit.png"
+          alt="ButtonExit"
+          class="menuprincipale-buttonexit">
+        ></button>
+     
+      </div>
       <div class="choose_class-container">
         <div class="choose_class-choose_class">
        
@@ -63,13 +71,9 @@
               class="choose_class-button"
             ></button>
             <span class="choose_class-text">
-              <span class="choose_class-text01">Class</span>
-              <span class="choose_class-text02">5</span>
+              <span class="choose_class-text01">Class 5</span>
             </span>
-            <span class="choose_class-text03">
-              <span class="choose_class-text04">Class</span>
-              <span class="choose_class-text05">5</span>
-            </span>
+         
             <button
               src="public/external/button137-4x5b-200h.png"
               alt="Button137"
@@ -88,11 +92,7 @@
               alt="Button142"
               class="choose_class-button3"
             ></button>
-            <button
-              src="public/external/button144-vx3-200h.png"
-              alt="Button144"
-              class="choose_class-button4"
-            ></button>
+         
             <button
               src="public/external/button146-7vlk-200h.png"
               alt="Button146"
