--- a/src/main/resources/static/choose_robot.css
+++ b/src/main/resources/static/choose_robot.css
@@ -15,8 +15,7 @@
   position: relative;
   align-items: flex-start;
   flex-shrink: 0;
-  background: url(./images/shader2.png);
-  backdrop-filter: blur(5px) ; 
+  background: url(./images/shader2_blur.jpg);
   background-repeat:no-repeat;
   background-size:cover;
   background-position: center center;    
@@ -26,7 +25,9 @@
   background-attachment: fixed;
   position: fixed;
 }
+
 .choose_robot-background {
+ 
   top: 0px;
   left: 0px;
   width: 1920px;
@@ -35,7 +36,8 @@
   position: absolute;
   align-items: flex-start;
   flex-shrink: 1;
-  backdrop-filter: blur(5px) ; 
+ height: 100vh;
+	width: 50%;
 }
 .choose_robot-shader {
   top: 0px;
@@ -108,15 +110,15 @@
 
 
 .choose_robot-frame1 {
-  top: 365px;
-  left: 632px;
+  top: 0px;
+  left: 0px;
   width: 650px;
-  height: 350px;
+  height: 800px;
   position: absolute;
   box-sizing: content-box;
-  border-color: rgba(55, 55, 55, 1);;
+  border-color: rgba(0, 0, 0, 0.6);
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   border-radius: 24px;
 }
 .choose_robot-button5 {
