--- a/src/main/resources/templates/ambientediediting.html
+++ b/src/main/resources/templates/ambientediediting.html
@@ -46,51 +46,52 @@
   </head>
   <body>
     <div>
-      <link href="./component1.css" rel="stylesheet" />
+      <link href="./ambientediediting.css" rel="stylesheet" />
 
-      <div class="component1-container">
-        <div class="component1-component1">
-          <img
-            src="public/external/a_editing/shader2074-4j0n-2000w.png"
-            alt="shader2074"
-            class="component1-shader"
-          />
-          <div class="component1-main">
+      <div class="ambientediediting-container">
+        <div class="ambientediediting-ambientediediting">
+          
+          <div class="ambientediediting-main">
             <button
               src="public/external/a_editing/button2071-176d-200h.png"
-              alt="Button2071"
-              class="component1-button"
+              alt="ButtonChoosenClass-ChoosenRobot"
+              class="ambientediediting-button"
             ></button>
-            <span class="component1-text">
-              <span>Chosen Class: 3 Chosen Robot: Evosuite</span>
+            <span class="ambientediediting-text">
+              <span>Chosen Class: 3          Chosen Robot: Evosuite</span>
             </span>
             <button
               src="public/external/a_editing/button2071-pd3v-700h.png"
-              alt="Button2071"
-              class="component1-button1"
+              alt="ButtonContenente"
+              class="ambientediediting-button1"
             ></button>
           </div>
           <button
             src="public/external/a_editing/button2073-zxg-200h.png"
-            alt="Button2073"
-            class="component1-button2"
+            alt="ButtonPiccolo1"
+            class="ambientediediting-button2"
           ></button>
-          <span class="component1-text02"><span>Back</span></span>
+          <span class="ambientediediting-text02"><span>Back</span></span>
           <button
             src="public/external/a_editing/button2073-b3i4-200h.png"
-            alt="Button2073"
-            class="component1-button3"
+            alt="ButtonPiccolo2"
+            class="ambientediediting-button3"
           ></button>
-          <span class="component1-text04"><span>Next</span></span>
-          <span class="component1-text06"><span>Save</span></span>
+          <span class="ambientediediting-text04"><span>Next</span></span>
+          <span class="ambientediediting-text06"><span>Save</span></span>
           <button
             src="public/external/a_editing/button2074-pncs-200h.png"
-            alt="Button2074"
-            class="component1-button4"
+            alt="ButtonPiccolo3"
+            class="ambientediediting-button4"
           > </button>
-          <span class="component1-text08"></span>
-          <span class="component1-text09">
-            <span>//WRITE HERE YOUR JAVA CODE</span>
+          <span class="ambientediediting-text08"></span>
+          <span class="ambientediediting-text09">
+            <label>
+              //WRITE HERE YOUR JAVA CODE
+
+              <input type="text" style="opacity: 0.1;">
+
+            </label>
           </span>
         </div>
       </div>
