--- a/src/main/resources/templates/choose_robot.html
+++ b/src/main/resources/templates/choose_robot.html
@@ -52,7 +52,7 @@
               class="choose_robot-frame1"
             ></button>
             <div class="choose_robot-choose_robot">
-              <div class="choose_robot-background"></div>
+              <div class="choose_robot-casellacont"></div>
             </div>
             <button
               src="public/external/button1174-uu1b-200h.png"
