--- a/src/main/resources/templates/choose_robot.html
+++ b/src/main/resources/templates/choose_robot.html
@@ -57,27 +57,27 @@
             <button
               src="public/external/button1174-uu1b-200h.png"
               alt="ButtonRandoop"
-              class="choose_robot-button5"
+              class="choose_robot-buttonrandoop"
             ></button>
             <button
               src="public/external/button1175-w7qt-200h.png"
               alt="ButtonEvosuite"
-              class="choose_robot-button6"
+              class="choose_robot-buttonevosuite"
             ></button>
             <button
               src="public/external/button1176-60cl-200h.png"
               alt="ButtonChoose"
-              class="choose_robot-button7"
+              class="choose_robot-buttonchoose"
             ></button>
             <button
               src="public/external/button1177-n1jd-200h.png"
               alt="ButtonCancel"
-              class="choose_robot-button8"
+              class="choose_robot-buttoncancel"
             ></button>
-            <span class="choose_robot-text22"><span>Choose</span></span>
-            <span class="choose_robot-text24"><span>Randoop</span></span>
-            <span class="choose_robot-text26"><span>Evosuite</span></span>
-            <span class="choose_robot-text28"><span>Cancel</span></span>
+            <span class="choose_robot-textchoose"><span>Choose</span></span>
+            <span class="choose_robot-textrandoop"><span>Randoop</span></span>
+            <span class="choose_robot-textevosuite"><span>Evosuite</span></span>
+            <span class="choose_robot-textcancel"><span>Cancel</span></span>
           </div>
         </div>
       </div>
