--- a/src/main/resources/templates/ambientediediting.html
+++ b/src/main/resources/templates/ambientediediting.html
@@ -58,13 +58,9 @@
               class="ambientediediting-button"
             ></button>
             <span class="ambientediediting-text">
-              <span>Chosen Class: 3          Chosen Robot: Evosuite</span>
+              <span style="white-space: pre-wrap;"></style>   Chosen Class: 3                  Chosen Robot: Evosuite</span>
             </span>
-            <button
-              src="public/external/a_editing/button2071-pd3v-700h.png"
-              alt="ButtonContenente"
-              class="ambientediediting-button1"
-            ></button>
+           
           </div>
           <button
             src="public/external/a_editing/button2073-zxg-200h.png"
@@ -87,9 +83,13 @@
           <span class="ambientediediting-text08"></span>
           <span class="ambientediediting-text09">
             <label>
-              //WRITE HERE YOUR JAVA CODE
-
-              <input type="text" style="opacity: 0.1;">
+              <textarea style=" top: 111px;
+              left: 124.84256744384766px;
+              width: 1224px;
+              height: 643px;   border-width: 2px; border-color: black;
+              margin: -51px; margin-right: 9px;
+              color: black; background-color: rgba(0, 0, 0, 0.1); white-space: nowrap; resize: none;" 
+              cols="75" rows="20" placeholder="//WRITE HERE YOUR JAVA CODE"></textarea>
 
             </label>
           </span>
