--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -53,7 +53,7 @@
       </div>
       <div class="choose_class-container">
         <div class="choose_class-choose_class">
-       
+          <div class="choose_robot-casellacont"></div>
           <div class="choose_class-main">
             <button
               src="public/external/frame133-1zkv-700w.png"
