--- a/src/main/resources/templates/menuprincipale.html
+++ b/src/main/resources/templates/menuprincipale.html
@@ -47,17 +47,20 @@
         <div class="menuprincipale-menuprincipale">
           
           <div class="menuprincipale-buttons">
-            <button
+            <a
               src="public/playground_assets/ButtonLungo.png"
               alt="ButtonCreateMatch"
-              class="menuprincipale-buttoncreatematch">
-            </button>
-            <button
+              class="menuprincipale-buttoncreatematch"
+              href="mainmenu">
+          </a>
+            
+            <a
               src="public/playground_assets/ButtonLungo.png"
               alt="ButtonLoadMatch"
-              class="menuprincipale-buttonloadmatch">
-            </button>
-            <span class="menuprincipale-text"><span>CREATE MATCH</span></span>
+              class="menuprincipale-buttonloadmatch"
+              href=" ">
+           </a>
+            <span class="menuprincipale-text" ><a href="mainmenu">CREATE MATCH</a></span>
             <span class="menuprincipale-text2"><span>LOAD MATCH</span></span>
           </div>
 
