--- a/src/main/resources/templates/menuprincipalept2.html
+++ b/src/main/resources/templates/menuprincipalept2.html
@@ -47,33 +47,37 @@
         <div class="menuprincipalept2-menuprincipalept2">
          
           <div class="menuprincipalept2-buttons">
-            <button
+            <a
               src="public/playground_assets/buttonbutton121-jvm-200h.png"
-              alt="Buttonbutton121"
+              alt="ButtonChooseClass"
               class="menuprincipalept2-buttonbutton"
-            ></button>
-            <button
+              href="chooseclass"
+            ></a>
+            <a
               src="public/playground_assets/buttonbutton122-73u-200h.png"
-              alt="Buttonbutton122"
+              alt="ButtonChooseRobot"
               class="menuprincipalept2-buttonbutton1"
-            ></button>
-            <button
+              href="chooserobot"
+            ></a>
+            <a
               src="public/playground_assets/buttoninput123-zai5-200h.png"
-              alt="Buttoninput123"
+              alt="ButtonStartGame"
               class="menuprincipalept2-buttoninput"
-            ></button>
-            <button
+              href="edit"
+            ></a>
+            <a
               src="public/playground_assets/button124-r2b-200h.png"
-              alt="Button124"
+              alt="ButtonExit"
               class="menuprincipalept2-button"
-            ></button>
-            <span class="menuprincipalept2-text"><span>Start Game</span></span>
+              href="index"
+            ></a>
+            <span class="menuprincipalept2-text"><a href="edit">Start Game</a></span>
             <span class="menuprincipalept2-text2">
-              <span>Choose Robot</span>
+              <a href="chooserobot">Choose Robot</a>
             </span>
-            <span class="menuprincipalept2-text4"><span>Exit</span></span>
+            <span class="menuprincipalept2-text4"><a href="index">Exit</a></span>
             <span class="menuprincipalept2-text6">
-              <span>Choose Class</span>
+              <a href="chooseclass">Choose Class</a>
             </span>
           </div>
         </div>
