--- a/src/main/resources/static/menuprincipalept2.css
+++ b/src/main/resources/static/menuprincipalept2.css
@@ -50,7 +50,7 @@
   width: 300px;
   height: 60px;
   position: absolute;
-  border-color: rgba(55, 55, 55, 1);
+  border-color: rgb(0, 0, 0);
   border-style: solid;
   border-width: 1px;
   border-radius: 16px;
@@ -61,7 +61,7 @@
   width: 300px;
   height: 60px;
   position: absolute;
-  border-color: rgba(143, 143, 143, 1);
+  border-color: rgb(0, 0, 0);
   border-style: solid;
   border-width: 1px;
   border-radius: 16px;
@@ -72,7 +72,7 @@
   width: 300px;
   height: 60px;
   position: absolute;
-  border-color: rgba(55, 55, 55, 1);
+  border-color: rgb(0, 0, 0);
   border-style: solid;
   border-width: 1px;
   border-radius: 16px;
@@ -83,7 +83,7 @@
   width: 300px;
   height: 60px;
   position: absolute;
-  border-color: rgba(55, 55, 55, 1);
+  border-color: rgb(0, 0, 0);
   border-style: solid;
   border-width: 1px;
   border-radius: 16px;
