--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -200,9 +200,9 @@
 
               class="choose_class-button5 pressione"
 
-            ></button>
+            ><p class="choose_class-text12">Classe 2</p></button>
 
-            <span class="choose_class-text12"><span>Class 2</span></span>
+            <!--<span class="choose_class-text12"><span>Class 2</span></span>-->
 
           </div>
 
