--- a/src/main/resources/templates/menuprincipale.html
+++ b/src/main/resources/templates/menuprincipale.html
@@ -50,18 +50,17 @@
             <a
               src="public/playground_assets/ButtonLungo.png"
               alt="ButtonCreateMatch"
-              class="menuprincipale-buttoncreatematch"
+              class="menuprincipale-buttoncreatematch pressione"
               href="mainmenu">
-          </a>
+          <p class="menuprincipale-text">CREATE MATCH</p></a>
             
             <a
               src="public/playground_assets/ButtonLungo.png"
               alt="ButtonLoadMatch"
-              class="menuprincipale-buttonloadmatch"
+              class="menuprincipale-buttonloadmatch pressione"
               href=" ">
+              <p class="menuprincipale-text2">LOAD MATCH</p>
            </a>
-            <span class="menuprincipale-text" ><a href="mainmenu">CREATE MATCH</a></span>
-            <span class="menuprincipale-text2"><span>LOAD MATCH</span></span>
           </div>
 
           <div class="menuprincipale-lowerbuttons">
