--- a/src/main/resources/templates/menuprincipalept2.html
+++ b/src/main/resources/templates/menuprincipalept2.html
@@ -50,35 +50,27 @@
             <a
               src="public/playground_assets/buttonbutton121-jvm-200h.png"
               alt="ButtonChooseClass"
-              class="menuprincipalept2-buttonbutton"
+              class="menuprincipalept2-buttonbutton pressione"
               href="chooseclass"
-            ></a>
+            ><p class="menuprincipalept2-text6">CHOOSE CLASS</p></a>
             <a
               src="public/playground_assets/buttonbutton122-73u-200h.png"
               alt="ButtonChooseRobot"
-              class="menuprincipalept2-buttonbutton1"
+              class="menuprincipalept2-buttonbutton1 pressione"
               href="chooserobot"
-            ></a>
+            ><p class="menuprincipalept2-text2">CHOOSE ROBOT</p></a>
             <a
               src="public/playground_assets/buttoninput123-zai5-200h.png"
               alt="ButtonStartGame"
-              class="menuprincipalept2-buttoninput"
+              class="menuprincipalept2-buttoninput pressione"
               href="edit"
-            ></a>
+            ><p class="menuprincipalept2-text">START GAME</p></a>
             <a
               src="public/playground_assets/button124-r2b-200h.png"
               alt="ButtonExit"
-              class="menuprincipalept2-button"
+              class="menuprincipalept2-button pressione"
               href="index"
-            ></a>
-            <span class="menuprincipalept2-text"><a href="edit">Start Game</a></span>
-            <span class="menuprincipalept2-text2">
-              <a href="chooserobot">Choose Robot</a>
-            </span>
-            <span class="menuprincipalept2-text4"><a href="index">Exit</a></span>
-            <span class="menuprincipalept2-text6">
-              <a href="chooseclass">Choose Class</a>
-            </span>
+            ><p class="menuprincipalept2-text4">EXIT</p></a>
           </div>
         </div>
       </div>
