--- a/src/main/resources/static/menuprincipalept2.css
+++ b/src/main/resources/static/menuprincipalept2.css
@@ -7,8 +7,8 @@
   flex-direction: column;
 }
 .menuprincipalept2-menuprincipalept2 {
-    width: 1920px;
-    height: 1080px;
+    width: 100%;
+    height: 100%;
     zoom: 77.2%;
     display: flex;
     overflow: hidden;
@@ -89,13 +89,13 @@
   border-radius: 16px;
 }
 .menuprincipalept2-text {
-  top: 234px;
-  left: 176px;
+  top: 15px;
+  left: 90px;
   color: rgba(255, 255, 255, 1);
   width: 169px;
   height: auto;
   position: absolute;
-  font-size: 24px;
+  font-size: 21px;
   font-style: Regular;
   text-align: left;
   font-family: ABeeZee;
@@ -105,14 +105,13 @@
   text-decoration: none;
 }
 .menuprincipalept2-text2 {
-  top: 158px;
-  left: 166px;
+  top: 18px;
+  left: 76px;
   color: rgba(255, 255, 255, 1);
   width: 181px;
   height: auto;
   position: absolute;
-  font-size: 24px;
-  font-style: Regular;
+  font-size: 21px;
   text-align: left;
   font-family: ABeeZee;
   font-weight: 400;
@@ -121,13 +120,13 @@
   text-decoration: none;
 }
 .menuprincipalept2-text4 {
-  top: 310px;
-  left: 215px;
+  top: 18px;
+  left: 125px;
   color: rgba(255, 255, 255, 1);
   width: 41px;
   height: auto;
   position: absolute;
-  font-size: 24px;
+  font-size: 21px;
   font-style: Regular;
   text-align: left;
   font-family: ABeeZee;
@@ -137,18 +136,25 @@
   text-decoration: none;
 }
 .menuprincipalept2-text6 {
-  top: 82px;
-  left: 176px;
+  top: 16px;
+  left: 76px;
   color: rgba(255, 255, 255, 1);
   width: 148px;
   height: auto;
+  white-space: nowrap;
   position: absolute;
-  font-size: 24px;
-  font-style: Regular;
+  font-size: 21px;
   text-align: left;
   font-family: ABeeZee;
   font-weight: 400;
   line-height: normal;
   font-stretch: normal;
   text-decoration: none;
+}
+.pressione:hover {
+
+  background-color: #5a03be;
+
+  color: white;
+
 }
