--- a/src/main/resources/static/choose_class.css
+++ b/src/main/resources/static/choose_class.css
@@ -722,6 +722,7 @@
   font-stretch: normal;
 
   text-decoration: none;
+  cursor: pointer;
 
 }
 
@@ -771,4 +772,3 @@
 
 }*/
 
-ha il menu contestuale
