--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -142,7 +142,7 @@
 
               src="public/external/button135-ic4e-200h.png"
 
-              alt="Button135"
+              alt="ButtonClass5"
 
               class="choose_class-button pressione"
 
@@ -150,41 +150,41 @@
 
             <span class="choose_class-text">
 
-              <span class="choose_class-text01">Class 5</span>
+              <span class="choose_class-text01"><a>Class 5</a></span>
 
             </span>
 
          
 
-            <button
+            <a
 
               src="public/external/button137-4x5b-200h.png"
 
-              alt="Button137"
+              alt="ButtonClass1"
 
               class="choose_class-button1 pressione"
 
-            ></button>
+            ></a>
 
-            <span class="choose_class-text08"><span>Class 1</span></span>
+            <span class="choose_class-text08"><a>Class 1</a></span>
 
             <button
 
               src="public/external/button140-7rth-200h.png"
 
-              alt="Button140"
+              alt="ButtonClass3"
 
               class="choose_class-button2 pressione"
 
             ></button>
 
-            <span class="choose_class-text10"><span>Class 3</span></span>
+            <span class="choose_class-text10"><a>Class 3</a></span>
 
             <button
 
               src="public/external/button142-i8w9-200h.png"
 
-              alt="Button142"
+              alt="ButtonClass4"
 
               class="choose_class-button3 pressione"
 
@@ -196,26 +196,27 @@
 
               src="public/external/button146-7vlk-200h.png"
 
-              alt="Button146"
+              alt="ButtonClass2"
 
               class="choose_class-button5 pressione"
 
             ></button>
 
-            <span class="choose_class-text12"><span>Class 2</span></span>
+            <span class="choose_class-text12"><a>Class 2</a></span>
 
           </div>
 
+         
+         
           <img
+            id="BottoneVerde"
 
             src="public/external/ellipse9159-zaf-200h.png"
 
-            alt="Ellipse9159"
+            alt="BottoneVerde"
 
             class="choose_class-ellipse9 pressione"
-
-          />
-
+          >
           <!--<img
 
             src="public/external/ellipse10160-ic5-200h.png"
@@ -240,39 +241,41 @@
 
             src="public/external/button162-mp7i-200h.png"
 
-            alt="Button162"
+            alt="ButtonSelect"
 
             class="choose_class-button6 pressione"
 
           ></button>
 
-          <span class="choose_class-text14"><span>Select</span></span>
+          <span class="choose_class-text14"><a>Select</a></span>
 
-          <button
+          <a
 
             src="public/external/button168-05xf-200h.png"
 
-            alt="Button168"
+            alt="ButtonBack"
 
             class="choose_class-button7 pressione"
 
-          ></button>
+            href="mainmenu"
 
-          <span class="choose_class-text16"><span>Back</span></span>
+          ></a>
+
+          <span class="choose_class-text16"><a href="mainmenu">Back</a></span>
 
           <button
 
             src="public/external/button170-70i-200h.png"
 
-            alt="Button170"
+            alt="ButtonRandom"
 
             class="choose_class-button8 pressione"
 
           ></button>
 
-          <span class="choose_class-text18"><span>Random</span></span>
+          <span class="choose_class-text18"><a>Random</a></span>
 
-          <span class="choose_class-text20"><span>Class 4</span></span>
+          <span class="choose_class-text20"><a>Class 4</a></span>
 
         </div>
 
