--- a/src/main/resources/static/menuprincipale.css
+++ b/src/main/resources/static/menuprincipale.css
@@ -13,8 +13,8 @@
 
 
   .menuprincipale-menuprincipale {
-    width: 1920px;
-    height: 1080px;
+    width: 100%;
+    height: 100%;
     zoom: 77.2%;
     display: flex;
     overflow: hidden;
