--- a/src/main/resources/templates/ambientediediting.html
+++ b/src/main/resources/templates/ambientediediting.html
@@ -65,21 +65,18 @@
           <button
             src="public/external/a_editing/button2073-zxg-200h.png"
             alt="ButtonPiccolo1"
-            class="ambientediediting-button2"
-          ></button>
-          <span class="ambientediediting-text02"><span>Back</span></span>
+            class="ambientediediting-button2 pressione"
+          ><p class="ambientediediting-text02 ">BACK</p></button>
           <button
             src="public/external/a_editing/button2073-b3i4-200h.png"
             alt="ButtonPiccolo2"
-            class="ambientediediting-button3"
-          ></button>
-          <span class="ambientediediting-text04"><span>Next</span></span>
-          <span class="ambientediediting-text06"><span>Save</span></span>
+            class="ambientediediting-button3 pressione"
+          ><p class="ambientediediting-text04 ">NEXT</p></button>
           <button
             src="public/external/a_editing/button2074-pncs-200h.png"
             alt="ButtonPiccolo3"
-            class="ambientediediting-button4"
-          > </button>
+            class="ambientediediting-button4 pressione"
+          > <p class="ambientediediting-text06 ">SAVE</p></button>
           <span class="ambientediediting-text08"></span>
           <span class="ambientediediting-text09">
             <label>
