--- a/src/main/resources/templates/choose_robot.html
+++ b/src/main/resources/templates/choose_robot.html
@@ -57,27 +57,23 @@
             <button
               src="public/external/button1174-uu1b-200h.png"
               alt="ButtonRandoop"
-              class="choose_robot-buttonrandoop"
-            ></button>
+              class="choose_robot-buttonrandoop pressione"
+            ><p class="choose_robot-textrandoop">RANDOOP</p></button>
             <button
               src="public/external/button1175-w7qt-200h.png"
               alt="ButtonEvosuite"
-              class="choose_robot-buttonevosuite"
-            ></button>
+              class="choose_robot-buttonevosuite pressione"
+            ><p class="choose_robot-textevosuite">EVOSUITE</p></button>
             <button
               src="public/external/button1176-60cl-200h.png"
               alt="ButtonChoose"
-              class="choose_robot-buttonchoose"
-            ></button>
+              class="choose_robot-buttonchoose pressione"
+            ><p class="choose_robot-textchoose">CHOOSE</p></button>
             <button
               src="public/external/button1177-n1jd-200h.png"
               alt="ButtonCancel"
-              class="choose_robot-buttoncancel"
-            ></button>
-            <span class="choose_robot-textchoose"><span>Choose</span></span>
-            <span class="choose_robot-textrandoop"><span>Randoop</span></span>
-            <span class="choose_robot-textevosuite"><span>Evosuite</span></span>
-            <span class="choose_robot-textcancel"><span>Cancel</span></span>
+              class="choose_robot-buttoncancel pressione"
+            ><p class="choose_robot-textcancel">BACK</p></button>
           </div>
         </div>
       </div>
